[package]
name = "libktx-sys"
version = "0.1.0"
authors = ["Lucas Priestley <lmpriestley@outlook.com>"]
edition = "2021"
description = "Rust bindings for libktx"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.69"
cmake = "0.1"
git2 = "0.18"
clang-sys = "1.2"
