[package]
name = "libktx-sys"
version = "0.1.0"
authors = ["Lucas Priestley <lmpriestley@outlook.com>"]
edition = "2021"
description = "Rust bindings for libktx"
license = "MIT"
homepage = "https://github.com/freylint/libktx-sys"
repository = "https://github.com/freylint/libktx-sys"
readme = "readme.md"
keywords = ["gamedev", "graphics"]
categories = [
    "game-development",
    "graphics",
    "encoding",
    "textures",
    "multimedia",
]
include = ["wrapper.h"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.69"
cmake = "0.1"
git2 = "0.18"
clang-sys = "1.2"
